--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "jsx": "react",
     "strict": true,
     "allowSyntheticDefaultImports": true,
+    "noImplicitAny": false,
   },
   "include": ["src"]
 }
