--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-accumulated-hook",
-  "version": "1.0.2",
+  "version": "1.0.0",
   "description": "",
   "source": "./src/index.tsx",
   "main": "./dist/index.js",
@@ -49,15 +49,15 @@
     "@babel/preset-env": "7.17.10",
     "@babel/preset-react": "7.16.7",
     "@babel/preset-typescript": "7.16.7",
-    "@types/jest": "^27.5.1",
-    "@types/lodash": "^4.14.182",
-    "@types/react": "^18.0.9",
+    "@types/jest": "27.5.1",
+    "@types/lodash": "4.14.182",
+    "@types/react": "18.0.9",
     "eslint-plugin-prettier": "4.0.0",
     "jest": "28.1.0",
     "lodash": "4.17.21",
     "prettier": "2.6.2",
     "react": "18.1.0",
-    "tsdx": "^0.14.1",
+    "tsdx": "0.14.1",
     "typescript": "4.6.4"
   }
 }
