--- a/package.json
+++ b/package.json
@@ -1,35 +1,17 @@
 {
-  "name": "react-accumulated-hook",
-  "version": "0.0.1",
+  "name": "react-accumulated-hook2",
+  "version": "0.0.2",
   "description": "React hook for accumulating data heap with following usage within delayed callback",
-  "main": "index.ts",
+  "author": "AleX83Xpert",
+  "license": "MIT",
+  "main": "index.js",
   "scripts": {
-    "build": "tsdx build",
-    "test": "jest",
-    "prettier": "prettier --check src",
-    "format": "prettier --write src"
-  },
-  "babel": {
-    "presets": [
-      "@babel/preset-env",
-      "@babel/preset-typescript",
-      "@babel/preset-react"
-    ]
-  },
-  "prettier": {
-    "printWidth": 80,
-    "semi": true,
-    "singleQuote": true,
-    "trailingComma": "es5"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/AleX83Xpert/react-accumulated-hook.git"
   },
-  "files": [
-    "dist",
-    "src"
-  ],
   "keywords": [
     "react",
     "hooks",
@@ -38,26 +20,12 @@
     "delayed",
     "forms"
   ],
-  "author": "AleX83Xpert",
-  "license": "MIT",
   "bugs": {
     "url": "https://github.com/AleX83Xpert/react-accumulated-hook/issues"
   },
   "homepage": "https://github.com/AleX83Xpert/react-accumulated-hook#readme",
   "devDependencies": {
-    "@babel/core": "7.17.10",
-    "@babel/preset-env": "7.17.10",
-    "@babel/preset-react": "7.16.7",
-    "@babel/preset-typescript": "7.16.7",
-    "@types/jest": "27.5.1",
-    "@types/lodash": "4.14.182",
-    "@types/react": "18.0.9",
-    "eslint-plugin-prettier": "4.0.0",
-    "jest": "28.1.0",
-    "lodash": "4.17.21",
-    "prettier": "2.6.2",
-    "react": "18.1.0",
-    "tsdx": "0.14.1",
-    "typescript": "4.6.4"
+    "lodash": "^4.17.21",
+    "react": "^18.1.0"
   }
 }
