--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "react-accumulated-hook2",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "React hook for accumulating data heap with following usage within delayed callback",
   "author": "AleX83Xpert",
   "license": "MIT",
-  "main": "index.js",
+  "main": "./dist/index.js",
   "scripts": {
     "build": "babel src --out-dir dist",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepublishOnly": "yarn build"
   },
   "repository": {
     "type": "git",
