--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "react-accumulated-hook2",
-  "version": "0.0.6",
+  "version": "0.1.0",
   "description": "React hook for accumulating data heap with following usage within delayed callback",
   "author": "AleX83Xpert",
   "license": "MIT",
   "main": "./dist/index.js",
+  "files": [ "src", "dist" ],
   "scripts": {
     "build": "babel src --out-dir dist",
     "test": "echo \"Error: no test specified\" && exit 1",
